v2.2
* Added Raze 1.5.0
* Updated EDuke32 dev to latest code
* Added Gyro 'Smart toggle' button to touch screen and gamepad
* Added Redneck Rampage : Ride Again
* Added Quick Kick button
* Fixed Scoped Storage to work (optional). Can decrease loads times on Android 11+ if enabled

v2.1.2
* Added latest EDuke32 code as new engine version 'dev'
* Ion Fury: Removed need for 'fury.def' file
* Eduke32: Re-enabled smalloc library
* Eduke32: Fixed screen tints (E.g red tint on damage)
* Added more scaling options to 'Resolution override' slider
* Improve load time of games on Android 11+
* Fix scaling of Touch Settings so not stretched on wide devices + added fling scrolling
* Fix Ion Fury not loading from SD Card

v2.0 RC2
* Fix toggle buttons

v2.0 RC1
* Eduke32: Fix wobbling textures on some devices
* Eduke32: Remove Keypad keys from default keys to custom buttons work
* Eduke32: Fix gamepad button binding
* Ion Fury: Added Medkit, Radar and Reload buttons
* Disabled Scoped Storage button until it is fixed

v2.0 Beta 6
* Changed default data folder from 'Raze' to 'Zeta'. WILL BE UPDATED ON NEW INSTALLS
* Eduke32: Graphical bug fixes
* Eduke32: Fixed -game_dir option
* Eduke32: Fixed 'DELETE CFG FILE' button
* Eduke32: Added -cachesize option to launcher
* Eduke32: Fixed so saves works for mods

v2.0 Beta 5
* Eduke32: Added option to load 'autoload' folder
* Eduke32: Fix sound lockup causing crash
* Eduke32: Mods now load with "-g" to command line
* Eduke32: Loads folders in EDUKE32 folder
* Eduke32:Added option to run from sub-folder (for Total Conversions)

v2.0 Beta 4
* Eduke32: Fix voxels so they are drawn
* Eduke32: Fix game exit crash
* Eduke32: Fix map crash
* Eduke32: Fix console button
* Changed icon

v2.0 Beta 3
Fix memory issue

v2.0 Beta 2
* Changed name to Zeta Touch
* Updated side engine panel visuals
* Fixed Eduke32 music to default and play SF2
* Eduke32 user files now stored in the correct place
* Updated icon
* Fixed invisible walls on Ion Fury

