@@ -2,7 +2,8 @@ v2.2
 * Added Raze 1.5.0
 * Updated EDuke32 dev to latest code
 * Added Gyro 'Smart toggle' button to touch screen and gamepad
-* Added Redneck Rampage : Ride Again
+* Added Redneck Rampage : Ride Again to launcher
+* Added WWII GI to launcher
 * Added Quick Kick button
 * Fixed Scoped Storage to work (optional). Can decrease loads times on Android 11+ if enabled
 
